--- a/templates/onsPage.html.twig
+++ b/templates/onsPage.html.twig
@@ -11,8 +11,8 @@
             <ons-back-button></ons-back-button>
         </div>
 
-        <div class="center" {{ stimulus_target('app','title') }}>
-            {{ block('pageId') }} title
+        <div class="center" {{ stimulus_target('app','page_title') }}>
+            {{ block('pageId') }} (page_title)
         </div>
 
         {% endblock %}
