refactor pages a bit

--- a/templates/app/about.html.twig
+++ b/templates/app/about.html.twig
@@ -1,10 +1,10 @@
 {% extends 'onsPage.html.twig' %}
 
 {% block pageId 'about' %}
-{% block toolbar %}
-    {{ parent() }}
-    <div class="center">About</div>
-{% endblock %}
+{#{% block toolbar %}#}
+{#    {{ parent() }}#}
+{#    <div class="center">About</div>#}
+{#{% endblock %}#}
 {% block body %}
     <p>
         This is a Symfony version of the
