--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,14 @@
-body {
-    background-color: skyblue;
+#grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 33vw;
+}
+
+#grid img {
+    width: 100%;
+    height: 100%;
+}
+
+.content {
+    border-color: #44db5e;
 }
