--- a/templates/app/pokemon.html.twig
+++ b/templates/app/pokemon.html.twig
@@ -9,11 +9,15 @@
 {% block body %}
     <h3>Pokemon-list</h3>
 
-    <twig:dexie store="savedTable"
+    {# @todo: make the db name global somehow #}
+    <twig:dexie
+            dbName="pokemon1"
+            store="savedTable"
                 :filter="{}"
                 :caller="_self">
 
         <twig:block name="twig_template">
+            there are {{ rows|length }} rows
 
             {% for row in rows %}
 {#                {{ row|json_encode }}#}
