--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 {#        <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">#}
         {% block stylesheets %}
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsenui.min.css">
+            {#            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsenui-core.min.css">#}
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsen-css-components.min.css">
+
         {% endblock %}
 
         {% block javascripts %}
@@ -15,9 +19,7 @@
 
 {#    {% set _appController = 'app' %}#}
     {# app_controller handles navigation #}
-    <body
-            class="app"
-            {{ stimulus_controller('app') }} >
+    <body class="app" {{ stimulus_controller(_app_sc) }} >
         {% block body %}{% endblock %}
     </body>
 </html>
