--- a/templates/app/pokemon.html.twig
+++ b/templates/app/pokemon.html.twig
@@ -9,24 +9,44 @@
 {% block body %}
     <h3>Pokemon-list</h3>
 
-    {# @todo: make the db name global somehow #}
+    {% set stimulusSettings = stimulus_action(_app_sc, 'test', 'click', {id: 7}).toArray %}
+
+    stimulusParams: stimulus_action(_app_sc, 'navigate', 'click').attributes.keys.first
+    {% set globals = {
+        stimulusAction: stimulusSettings['data-action'],
+        stimulusParamsVar: stimulusSettings|keys|last
+    } %}
     <twig:dexie
             dbName="pokemon1"
             store="savedTable"
+                :globals="globals"
                 :filter="{}"
                 :caller="_self">
 
-        <twig:block name="twig_template">
+        <twig:block name="twig_template" id="hack_to_get_raw_data">
             there are {{ rows|length }} rows
+
+            {{ globals.stimulusAction }}
 
             {% for row in rows %}
 {#                {{ row|json_encode }}#}
 {#                <!--{% set checked = row.owned ? 'checked' : '' %}-->#}
+
+                outside of component
+                <a href="#" {{ globals.stimulusParamsVar }}="{{ row.id }}" >XX</a>
                 <ons-list-item>
-                    <a data-action="click->app#test"
-                       data-app-id-param="{{ row.id }}" >
+                    {# was this #}
+                    <a data-action="{{ globals.stimulusAction }}"
+{#                    <a data-action="click->app#test" #}
+{#                       data-app-id-param="{{ row.id }}" >#}
+{#                    <a data-action="click->survos--mobile-bundle--mobile#test"#}
+{#                       data-survos--mobile-bundle--mobile-id-param="{{ row.id }}" >#}
+{#                        {{ globals.stimulusParamsVar }}#}
+{#                        ={{ row.id }}#}
+{#                        <br />#}
+                       {{ globals.stimulusParamsVar }}="{{ row.id }}" >
                         {{ row.name }} / {{ row.id }}
-                        {{ checkedValue }}
+{#                        {{ checkedValue }}#}
                     </a>
                     <ons-switch
                             data-controller="ownswitch"
@@ -37,6 +57,8 @@
                     </ons-switch>
                 </ons-list-item>
             {% endfor %}
+            {# this html tag is used for a regex grab if node->html() doesn't work #}
+            <!-- hack_to_get_raw_data -->
         </twig:block>
     </twig:dexie>
 
