--- a/templates/app/_tabs.html.twig
+++ b/templates/app/_tabs.html.twig
@@ -1,7 +1,8 @@
-<ons-tab page="pokemon" label="Pokemon" icon="fa-home"></ons-tab>
-<ons-tab page="gallery" label="Gallery" icon="fa-images"></ons-tab>
-<ons-tab page="saved" label="Saved">
-            <span class="notification" {{ stimulus_target('app', 'savedCount') }}>
-            </span>
-</ons-tab>
-<ons-tab page="share" label="Share" icon="fa-qrcode"></ons-tab>
+{#<ons-tab page="pokemon" label="Pokemon" icon="fa-home"></ons-tab>#}
+{#<ons-tab page="gallery" label="Gallery" icon="fa-images"></ons-tab>#}
+
+{{ component('mobile_menu', {type: TAB_MENU, caller: _self}) }}
+{#<ons-tab page="saved" label="Saved" badge="XX" icon="fa-database">#}
+{#    <span class="notification" {{ stimulus_target('app', 'savedCount') }}>#}
+{#    </span>#}
+{#</ons-tab>#}
