--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -67,7 +67,7 @@
               <ons-navigator
                       id="navigator"
                       {{ stimulus_target(_app_sc, 'navigator') }}
-                      page="home"
+                      page="initial-layout"
               > <!-- the starting page -->
 
               </ons-navigator>
