--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html lang="{{ lang|default('en') }}">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-    {% block stylesheets %}
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsenui.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onsenui@2.12.8/css/onsen-css-components.min.css">
-    {% endblock %}
-
-    {% block javascripts %}
-        {% block importmap %}{{ importmap('app') }}{% endblock %}
-    {% endblock %}
-    {{ pwa|default(false) ? pwa() }}
-
-    <title>{% block title _self %}</title>
-</head>
-
-{#    {% set _appController = 'app' %}#}
-{# app_controller handles navigation #}
-<body id="app_body" class="app" {{ stimulus_controller(_app_sc) }} >
-{% block body %}{% endblock %}
-</body>
-</html>
+{% extends "@SurvosMobile/base.html.twig" %}
